# artdaq_utilities

./: .gitignore  CMakeLists.txt  CMakePresets.json
Modules/: Doxyfile.in  NodeJSAddon.cmake  PythonAddon.cmake  artdaq_doxygen.cmake
artdaq-ganglia-plugin/: CMakeLists.txt
artdaq-ganglia-plugin/artdaq-ganglia-plugin/: CMakeLists.txt  binding.gyp  ganglia_metric.cc  gmetric.i  send_gmetric.c  send_gmetric.h
artdaq-ganglia-plugin/ups/: product_deps
artdaq-utilities/: CMakeLists.txt
artdaq-utilities/BuildInfo/: CMakeLists.txt  GetPackageBuildInfo.cc.in  GetPackageBuildInfo.hh
artdaq-utilities/Plugins/: CMakeLists.txt  GPMMacros.hh  GPMPublisher.hh  GPMSubscriber.hh  MakeGPMPlugins.cc  MakeGPMPlugins.hh  MakeParameterSet.hh  MetricData.hh  MetricMacros.hh  MetricManager.cc  MetricManager.hh  MetricPlugin.hh  SystemMetricCollector.cc  SystemMetricCollector.hh  TestMetric.cc  TestMetric.hh  file_metric.cc  graphite_metric.cc  makeMetricPlugin.cc  makeMetricPlugin.hh  msgFacility_metric.cc  procFile_metric.cc  report_metric.cc  test_metric.cc  trace_metric.cc  websocket_metric.cc
artdaq-utilities/Plugins/fcl/: file_metric.fcl  graphite_metric.fcl  msgFacility_metric.fcl
for_jenkins/: CMakeLists.txt  artdaq_dependencies-cfg-  artdaq_dependencies-cfg-3.00.03  build-artdaq-demo.sh  build-artdaq-lite.sh  build-artdaq.sh  build-artdaq_database.sh  build-artdaq_demo.sh  build-artdaq_dependencies.sh  build-darkmon.sh  build-dune_raw_data.sh  build-lbne_raw_data.sh  build-lbne_raw_data_esr.sh  buildFW  buildProducts.sh  build_pqxx.sh  create_all_jenkins_builds.sh  create_all_jenkins_builds_noups.sh  create_jenkins_build.sh  create_jenkins_build_noups.sh  package_deps.sh  parse_product_deps.py  utils.sh
node.js/: .gitignore  client.html  fileserver.js  iostat.js  procstat.js  runcommand.js  runcommand.js~  serverbase.js  setupNodeServer.sh  template.html.in
node.js/JSRootIO/: index.htm~  index_simple.htm  index_simple.htm~
node.js/JSRootIO/scripts/: JSRootInterface.js~
node.js/Win32/: .gitignore  artdaq_serverbase.njsproj  artdaq_serverbase.sln
node.js/certs/certificates/: 3d863bc5.signing_policy  974be925.signing_policy
node.js/modules/JSRootIO/client/: index.htm
node.js/modules/JSRootIO/client/scripts/: JSRoot3DPainter.js  JSRootCore.js  JSRootIOEvolution.js  JSRootInterface.js
node.js/modules/artdaq-configuration/client/: ASCII_simulator.html  BoardReader.html  ConfigurationEditor.html  ConfigurationEditor.js  TOY1_simulator.html  TOY2_generator.html  TOY2_simulator.html  TenByte_reader.html  UDP_receiver.html  V172X_generator.html  V172X_reader.html
node.js/modules/artdaq-configuration/server/: artdaq-configuration_module.js
node.js/modules/artdaq-daqmon/client/: client.css  client.html  client.js  sankey.js
node.js/modules/artdaq-daqmon/server/: artdaq-daqmon_module.js
node.js/modules/artdaq-runcontrol/client/: MakeEventGraph.js  UDPDump.html  UDPDump.js  client.css  client.html  client.js  viewer.html  viewer.js
node.js/modules/artdaq-runcontrol/server/: artdaq-runcontrol_module.js  cleanupArtdaq.sh  dispatcher-receiver_module.js  killArtdaq.sh  killRogueArtdaq.sh  runART.sh  runARTDAQ.sh  udpdump_module.js
node.js/modules/base/client/: AjaxPostAndGet.js  MakeGraph.js  ReadServerLog.html  jquery.mobile-1.4.5.js
node.js/modules/base/server/: base_module.js
node.js/modules/db/client/: Dialog.html  FileInfo.html  Tables.html  TreeGrid.html  client.css  client.html  client.js
node.js/modules/db/server/: Utils.js  db_module.js
node.js/modules/iostat/client/: client.html  client.js
node.js/modules/iostat/server/: iostat_module.js
node.js/modules/procstat/client/: client.html  client.js
node.js/modules/procstat/server/: procstat_module.js
node.js/modules/runcommand/client/: cat.sh  client.html  client.js  echoscript.sh  ls.sh
node.js/modules/runcommand/server/: inputtest.sh  runcommand_module.js
node.js/modules/template/client/: client.html
node.js/modules/template/server/: template_module.js
node.js/safe/: infinite_echoscript.sh
script/: CMakeLists.txt  rgang_iperf.sh
test/: CMakeLists.txt
test/Plugins/: CMakeLists.txt  MetricManager_t.cc  MetricPlugin_t.cc
ups/: CMakeLists.txt  artdaq_utilities.current.in  product_deps
